# AnalogsEnsemble

./: '  .dockerignore  .gitignore  .travis.yml  .ycm_extra_conf.py  .zenodo.json  AnEn.cpp  AnEn.h  AnEnIO.cpp  AnEnIO.h  Analogs.cpp  Analogs.h  Array4D.cpp  Array4D.h  CMakeLists.txt  CMakeLists_Boost.txt  CMakeLists_HDF5.txt  CMakeLists_Uninstall.txt  CMakeLists_netCDF.txt  CNAME  Changelog.md  CompilersOptions  Dockerfile  Forecasts.cpp  Forecasts.h  Gemfile  LICENSE-website-front  LICENSE.md  LICENSE.txt  NEWS.md  Observations.cpp  Observations.h  Parameters.cpp  Parameters.h  README.md  SimilarityMatrices.cpp  SimilarityMatrices.h  Stations.cpp  Stations.h  Time.cpp  (+17 more)
CAnEn/: CMakeLists.txt
CAnEn/include/: AnEn.h  AnEnDefaults.h  AnEnErr.h  AnEnIS.h  AnEnIS.tpp  AnEnSSE.h  AnEnSSE.tpp  AnEnSSEMS.h  Analogs.h  Array4D.h  Array4DPointer.h  BasicData.h  BmDim.h  By.h  Calculator.h  CommonExeFunctions.h  Config.h  ConfigNames.h  Forecasts.h  ForecastsArray.h  ForecastsPointer.h  Functions.h  Functions.tpp  MathFunctions.h  Normalization.h  Observations.h  ObservationsArray.h  ObservationsPointer.h  Parameters.h  Profiler.h  SimilarityMatrices.h  SimilarityMatrices.tpp  StandardDeviation.h  Stations.h  Times.h  colorTexts.h  errorType.h
CAnEn/src/: AnEn.cpp  AnEnErr.cpp  AnEnIS.cpp  AnEnSSE.cpp  AnEnSSEMS.cpp  Analogs.cpp  Array4D.cpp  Array4DPointer.cpp  BasicData.cpp  Calculator.cpp  Config.cpp  Forecasts.cpp  ForecastsArray.cpp  ForecastsPointer.cpp  Functions.cpp  MathFunctions.cpp  Normalization.cpp  Observations.cpp  ObservationsArray.cpp  ObservationsPointer.cpp  Parameters.cpp  Profiler.cpp  SimilarityMatrices.cpp  StandardDeviation.cpp  Stations.cpp  Times.cpp  errorType.cpp
CAnEnIO/: CMakeLists.txt  NEWS.md
CAnEnIO/cmake/: FindNetCDF.cmake  install_eccodes.sh  install_netcdf-c++4.sh
CAnEnIO/include/: AnEnIO.h  AnEnIO.tpp  AnEnIOErr.h  AnEnNames.h  AnEnRead.h  AnEnReadGrib.h  AnEnReadNcdf.h  AnEnReadNcdf.tpp  AnEnWrite.h  AnEnWriteNcdf.h  Analogs.h  FunctionsIO.h  Ncdf.h  Ncdf.tpp  ParameterGrib.h  ReadNcdf.h  ReadNcdf.tpp  ReadTxt.h  ReadTxt.tpp  Txt.h  Txt.tpp  functions_netcdf.h
CAnEnIO/old/: AnEnRead.h
CAnEnIO/src/: AnEnIO.cpp  AnEnIOErr.cpp  AnEnRead.cpp  AnEnReadGrib.cpp  AnEnReadNcdf.cpp  AnEnWriteNcdf.cpp  Analogs.cpp  FunctionsIO.cpp  Ncdf.cpp  ParameterGrib.cpp  ReadNcdf.cpp  ReadTxt.cpp  Txt.cpp
CAnEnIOMPI/: AnEnReadGribMPI.cpp  AnEnReadGribMPI.h  CMakeLists.txt  FunctionsMPI.cpp  FunctionsMPI.h
CAnEnMPI/: AnEnISMPI.cpp  AnEnISMPI.h  CMakeLists.txt  FunctionsMPI.cpp  FunctionsMPI.h
CGrid/: CMakeLists.txt
CGrid/include/: Grid.h  GridQuery.h  Txt.h  Txt.tpp
CGrid/src/: Grid.cpp  GridPy.cpp  GridQuery.cpp  Txt.cpp
RAnalogs/: CHANGELOG.md  CMakeLists.txt
RAnalogs/RAnEn/: CMakeLists.txt  DESCRIPTION  DESCRIPTION.in  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  _pkgdown.yml  config.cfg  configure  configure.ac
RAnalogs/configure_files/: DESCRIPTION  Makevars.in  Makevars.win.in  configure  configure.ac
RAnalogs/developerGuides/: generate_site.R  guide_write_R_extension.md  use_jupyter_notebook.md
RAnalogs/examples/: .gitignore  demo-1_AnEn-basics.Rmd  demo-1_AnEn-basics.html  demo-1_AnEn-basics.ipynb  demo-1_RAnEn-basics.ipynb  demo-1_temperature-forecasts.ipynb  demo-2_search-extension.R  demo-2_search-extension.Rmd  demo-2_search-extension.ipynb  demo-3_operational-search.Rmd  demo-3_operational-search.ipynb  demo-4_SEA2019.Rmd  demo-4_SEA2019.ipynb  demo-5_observation-conversion.Rmd  generate-analysis.R  generate-forecasts.R  rmd-ipy.sh  search_extension.R
RAnalogs/releases/: RAnEn_4.0.0.tar.gz.REMOVED.git-id  RAnEn_latest.tar.gz.REMOVED.git-id
RAnalogs/test/: compare_results.R  test-Wind.Rdata
RAnalogs/tests/: .gitignore  compare_results.R  compare_results_deprecated.R  config.cfg  data-generate-part-forecast-files.R  data-generate-search-stations.Rdata  data-to-NetCDF-solar.R  data-to-NetCDF-wind.R  test-AnEnSSEMS.RData  test-Solar.Rdata  test_ALL.R  test_CXX-API.R  test_CXX-analogGenerator.R  test_CXX-fileAggregate-analogs.R  test_CXX-fileAggregate-forecasts.R  test_CXX-fileAggregate-observations.R  test_CXX-fileAggregate-sds.R  test_CXX-fileAggregate-sims.R  test_CXX-fileAggregate.R  test_CXX-fileReshape.R  test_CXX-standardDeviationCalculator.R  test_CXX-windFieldCalculator.R  test_R-API-circular.R  test_R-API-deprecated.R  test_R-API-leaveoneout.R  test_R-API-quick.R  test_R-API-rolling.R  test_R-API-search-modes.R  test_R-API-std-and-sims.R  test_R-API-v3.R  test_R-API-v4.R  test_R-API.R  test_R-API_deprecated.R  test_R-AnEnSSEMS.R  test_R-alignObservations.R  test_R-generateSearchStations.R  test_R-read-write.R  test_R-toMemberForecasts.R  test_all.R
app_analogGenerator/: CMakeLists.txt  analogGenerator.cpp
app_analogsGenerator/: CMakeLists.txt  analogsGenerator.cpp
app_gribConverter/: CMakeLists.txt  example.cfg  gribConverter.cpp
app_similarityCalculator/: CMakeLists.txt  similarityCalculator.cpp
apps/anen/: CMakeLists.txt  anen.cpp
apps/anen_grib/: CMakeLists.txt  anen_grib.cpp
apps/anen_netcdf/: CMakeLists.txt  anen_netcdf.cpp
apps/app_analogGenerator/: CMakeLists.txt  analogGenerator.cpp
apps/app_analogSelector/: CMakeLists.txt  analogSelector.cpp
apps/app_fileAggregate/: CMakeLists.txt  fileAggregate.cpp
apps/app_forecastsToObservations/: CMakeLists.txt  forecastsToObservations.cpp
apps/app_gribConverter/: CMakeLists.txt  gribConverter.cpp  gribConverterFunctions.h  (+2 more)
tests/: CMakeLists.txt  newsimpletest.cpp  runnerAnEn.cpp  runnerAnEnIO.cpp  runnerForecastsArray.cpp  runnerObservationsArray.cpp  runnerSimilarityMatrices.cpp  runnerStandardDeviation.cpp  runnerStation.cpp  runnerStations.cpp  runnerTimes.cpp  testAnEn.cpp  testAnEn.h  testAnEnIO.cpp  testAnEnIO.h  testForecastsArray.cpp  testForecastsArray.h  testObservationsArray.cpp  testObservationsArray.h  testSimilarityMatrices.cpp  testSimilarityMatrices.h  testStandardDeviation.cpp  testStandardDeviation.h  testStation.cpp  testStation.h  testStations.cpp  testStations.h  testTimes.cpp  testTimes.h  test_forecasts.nc  test_observations.nc
(+7158 files in other folders)
